@W-23825233: Implement Step 8 custom-Java compatibility (FIX/FLAG split, version-boundary gate) (#10)
Replace the Step 8 stub with the full custom-Java handling: a deterministic
version-boundary gate (run only when targetJava > currentJava), per-item
version anchoring (JEP 320 removals, JEP 396/403 internals, JEP 252 locale,
deprecated methods), and a FIX vs FLAG split — readable source is rewritten,
runtime-only surfaces (Spring beans, Serializable state, custom TLS/security,
log4j appenders, JDK-module reflection) are flagged for operator confirmation.
Wires findings into the plan (§Custom Java downstream impact, §Known risks)
and the execute phase (Step 15.4). Validated by two full live upgrade runs
on a purpose-built 8->17 fixture.